Fix backface visibility for chrome v75+

--- a/onepage/static/onepage/css/style.css
+++ b/onepage/static/onepage/css/style.css
@@ -615,6 +615,7 @@ a.focus-text-secondary:focus {
     transition: all 1s cubic-bezier(0.175, 0.885, 0.320, 1);
     backface-visibility: hidden;
     position: absolute !important;
+    transform-style: preserve-3d;
 }
 
 .scenario_tree_1 {
@@ -643,6 +644,7 @@ a.focus-text-secondary:focus {
     transform-origin: bottom;
     transition: all 1s cubic-bezier(0.175, 0.885, 0.320, 1);
     backface-visibility: hidden;
+    transform-style: preserve-3d;
 }
 
 .scenario_countryside {
@@ -652,6 +654,7 @@ a.focus-text-secondary:focus {
     transform-origin: bottom;
     transition: all 1s cubic-bezier(0.175, 0.885, 0.320, 1);
     backface-visibility: hidden;
+    transform-style: preserve-3d;
 }
 
 .scenario_visible {
